# tinypico

./: .gitignore  README.md  boot.py  config.json  main.py  pymakr.conf  pyproject.toml  tinypico.code-workspace  ugit.py
lib/: micropython_dotstar.py  tinypico.py
src/: greet.py
util/mqtt/: mqtt.py
